# koral

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
examples/: complex_app.rs  complex_flag_manual.rs  comprehensive.rs  custom_app.rs  custom_type.rs  custom_types.rs  full.rs  hello.rs  manual_struct.rs  nest_app.rs  sample.rs  simple.rs  simple_app.rs  todo.rs
examples/cloud-cli/: Cargo.toml  README.md
examples/cloud-cli/src/: commands.rs  domain.rs  flags.rs  main.rs  middleware.rs  state.rs
examples/enterprise-ops/: Cargo.toml  README.md
examples/enterprise-ops/src/: context.rs  gen.rs  lib.rs  main.rs
examples/enterprise-ops/src/cicd/: mod.rs  pipelines.rs  runners.rs
examples/enterprise-ops/src/common/: mod.rs
examples/enterprise-ops/src/db/: mod.rs  postgres.rs  redis.rs
examples/enterprise-ops/src/iam/: mod.rs  policies.rs  users.rs
examples/enterprise-ops/src/k8s/: clusters.rs  mod.rs  nodepools.rs  workloads.rs
examples/enterprise-ops/src/monitor/: logs.rs  metrics.rs  mod.rs
examples/enterprise-ops/src/network/: mod.rs  vpc.rs
examples/hello-world/: Cargo.toml  README.md
examples/kv-store/: Cargo.toml  README.md
examples/sys-monitor/: Cargo.toml  README.md
examples/todo-app/: Cargo.toml  README.md
koral_derive/: Cargo.toml
koral_derive/src/: derive_app.rs  derive_flag.rs  derive_flag_value.rs  lib.rs  (+2 more)
src/: action.rs  app.rs  command.rs  completion.rs  context.rs  error.rs  extract.rs  flag.rs  handler.rs  help.rs  lib.rs  man.rs  middleware.rs  parser.rs  provider.rs  traits.rs
tests/: alias_test.rs  bool_default_test.rs  completion.rs  completion_nested.rs  completion_test.rs  custom_type_test.rs  di_test.rs  dispatch_test.rs  env_test.rs  error_extensibility.rs  error_test.rs  flags_test.rs  help_formatting.rs  help_override_test.rs  help_test.rs  inject_middleware_test.rs  integration.rs  middleware_help_test.rs  middleware_ordering_test.rs  middleware_test.rs  missing_features.rs  negative_num_test.rs  option_extract_test.rs  parser_tests.rs  provider_test.rs  required_test.rs  strict_mode.rs  strict_test.rs  subcommand_required_test.rs  subcommand_test.rs  validator_test.rs
(+15 files in other folders)
