[package]
name = "enterprise-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
koral = { path = "../../" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
